Fix starcatcher uploads for real
See previous commit. If this doesn't fix it, I don't know what will. Let's see how long this chain of "Fix starcatcher uploads" commits goes on.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -133,7 +133,7 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: ${{ matrix.asset_name }}
-      - run: mv ${{ matrix.asset_name }} ${{ matrix.starcatcher_name }}
+      - run: mv ${{ matrix.asset_path }} ${{ matrix.starcatcher_name }}
       - run: sudo apt update && sudo apt install lftp && bash -c './.github/starcatcher-publish.sh'
         env:
           PUBLISH_HOSTPORT: ${{ secrets.STARCATCHER_PUBLISH_HOSTPORT }}
