Hide CommandInterface creation behind a factory
Which is then provided by either a Lua-ful or a Lua-less translation unit.

--- a/src/meson.build
+++ b/src/meson.build
@@ -33,6 +33,10 @@ subdir('graphics')
 subdir('gui')
 if lua_variant != 'none'
 	subdir('lua')
+else
+	powder_files += files(
+		'lua/PlainCommandInterface.cpp',
+	)
 endif
 subdir('resampler')
 subdir('simulation')
