Let mods customize app constants
Mainly via meson_options.txt.

--- a/android/res/meson.build
+++ b/android/res/meson.build
@@ -1,6 +1,7 @@
 android_resources = files(
 	'mipmap-mdpi/ic_launcher.png',
 	'values/colors.xml',
-	'values/strings.xml',
 	'values/styles.xml',
 )
+
+subdir('values')
