--- a/meson.build
+++ b/meson.build
@@ -350,6 +350,7 @@ conf_data.set('APPID', app_id)
 conf_data.set('APPDATA', get_option('app_data'))
 conf_data.set('APPVENDOR', get_option('app_vendor'))
 conf_data.set('LUACONSOLE', lua_variant != 'none' ? 'true' : 'false')
+conf_data.set('GRAVFFT', enable_gravfft ? 'true' : 'false')
 
 data_files = []
 
