Preprocessor purge round 12: BETA, SNAPSHOT, MOD

--- a/meson.build
+++ b/meson.build
@@ -327,13 +327,13 @@ conf_data.set('AND', host_platform == 'android')
 conf_data.set('WIN', host_platform == 'windows')
 conf_data.set('MACOSX', host_platform == 'darwin')
 conf_data.set('X86', is_x86)
-conf_data.set('BETA', is_beta)
+conf_data.set('BETA', is_beta ? 'true' : 'false')
 conf_data.set('INSTALL_CHECK', get_option('install_check') ? 'true' : 'false')
 conf_data.set('IGNORE_UPDATES', get_option('ignore_updates') ? 'true' : 'false')
 conf_data.set('MOD_ID', mod_id)
 conf_data.set('DEBUG', is_debug)
-conf_data.set('SNAPSHOT', is_snapshot)
-conf_data.set('MOD', is_mod)
+conf_data.set('SNAPSHOT', is_snapshot ? 'true' : 'false')
+conf_data.set('MOD', is_mod ? 'true' : 'false')
 conf_data.set('SNAPSHOT_ID', get_option('snapshot_id'))
 conf_data.set('SERVER', get_option('server'))
 conf_data.set('STATICSERVER', get_option('static_server'))
