Preprocessor purge round 13: X86

--- a/meson.build
+++ b/meson.build
@@ -326,7 +326,7 @@ conf_data.set('LIN', host_platform == 'linux')
 conf_data.set('AND', host_platform == 'android')
 conf_data.set('WIN', host_platform == 'windows')
 conf_data.set('MACOSX', host_platform == 'darwin')
-conf_data.set('X86', is_x86)
+conf_data.set('X86', is_x86 ? 'true' : 'false')
 conf_data.set('BETA', is_beta ? 'true' : 'false')
 conf_data.set('INSTALL_CHECK', get_option('install_check') ? 'true' : 'false')
 conf_data.set('IGNORE_UPDATES', get_option('ignore_updates') ? 'true' : 'false')
