Preprocessor purge round 16: DEBUG

--- a/meson.build
+++ b/meson.build
@@ -331,7 +331,7 @@ conf_data.set('BETA', is_beta ? 'true' : 'false')
 conf_data.set('INSTALL_CHECK', get_option('install_check') ? 'true' : 'false')
 conf_data.set('IGNORE_UPDATES', get_option('ignore_updates') ? 'true' : 'false')
 conf_data.set('MOD_ID', mod_id)
-conf_data.set('DEBUG', is_debug)
+conf_data.set('DEBUG', is_debug ? 'true' : 'false')
 conf_data.set('SNAPSHOT', is_snapshot ? 'true' : 'false')
 conf_data.set('MOD', is_mod ? 'true' : 'false')
 conf_data.set('SNAPSHOT_ID', get_option('snapshot_id'))
