--- a/resources/powder.template.desktop
+++ b/resources/powder.template.desktop
@@ -5,4 +5,4 @@ Comment=@APPCOMMENT@
 MimeType=application/vnd.powdertoy.save;x-scheme-handler/ptsave;
 Categories=Game;Simulation;
 Exec=@APPEXE@ %u
-Icon=@APPVENDOR@-@APPEXE@
+Icon=@APPEXE@
