--- a/src/lua/meson.build
+++ b/src/lua/meson.build
@@ -10,11 +10,16 @@ luaconsole_files = files(
 	'LuaProgressBar.cpp',
 	'LuaScriptInterface.cpp',
 	'LuaSlider.cpp',
+	'LuaSocket.cpp',
 	'LuaSmartRef.cpp',
 	'LuaTextbox.cpp',
 	'LuaWindow.cpp',
-	'LuaSocket.cpp',
 )
+if host_platform == 'windows'
+	luaconsole_files += files('LuaSocketWindows.cpp')
+else
+	luaconsole_files += files('LuaSocketDefault.cpp')
+endif
 if enable_http
 	luaconsole_files += files('LuaSocketTCPHttp.cpp')
 else
