Emscripten: Add target, update tpt-libs
The code itself is nowhere near being usable in a browser though.

--- a/meson.build
+++ b/meson.build
@@ -48,6 +48,9 @@ elif c_compiler.get_id() in [ 'gcc' ] and host_platform == 'windows'
 	endif
 elif host_platform in [ 'darwin' ]
 	host_libc = 'macos'
+elif host_platform in [ 'emscripten' ]
+	host_platform = 'emscripten'
+	host_libc = 'emscripten'
 elif host_platform in [ 'android' ]
 	host_platform = 'android'
 	host_libc = 'bionic'
@@ -85,7 +88,7 @@ tpt_libs_debug = is_debug ? 'debug' : 'release'
 tpt_libs_variant = '@0@-@1@-@2@-@3@'.format(host_arch, host_platform, host_libc, tpt_libs_static)
 tpt_libs_vtag = get_option('tpt_libs_vtag')
 if tpt_libs_vtag == ''
-	tpt_libs_vtag = 'v20230205154205'
+	tpt_libs_vtag = 'v20230819222922'
 endif
 if tpt_libs_static != 'none'
 	if tpt_libs_variant not in [
@@ -102,6 +105,7 @@ if tpt_libs_static != 'none'
 		'x86_64-android-bionic-static',
 		'arm-android-bionic-static',
 		'aarch64-android-bionic-static',
+		'wasm32-emscripten-emscripten-static',
 	]
 		error('no prebuilt @0@ libraries are currently provided'.format(tpt_libs_variant))
 	endif
@@ -144,7 +148,14 @@ endif
 
 lua_variant = get_option('lua')
 if lua_variant == 'auto'
-	lua_variant = 'luajit'
+	if host_platform == 'emscripten'
+		lua_variant = 'lua5.2'
+	else
+		lua_variant = 'luajit'
+	endif
+endif
+if lua_variant == 'luajit' and host_platform == 'emscripten'
+	error('luajit does not work with emscripten')
 endif
 if lua_variant == 'none'
 	lua_dep = []
@@ -177,19 +188,51 @@ if host_platform == 'android'
 		error('tpt-libs android platform mismatch')
 	endif
 endif
-curl_dep = enable_http ? dependency('libcurl', static: is_static) : []
-
-fftw_dep = dependency('fftw3f', static: is_static)
-threads_dep = dependency('threads')
-zlib_dep = dependency('zlib', static: is_static)
-png_dep = dependency('libpng16', static: is_static)
-sdl2_dep = dependency('sdl2', static: is_static)
-bzip2_dep = dependency('bzip2', static: is_static)
-json_dep = dependency('jsoncpp', static: is_static)
+curl_dep = []
+if enable_http and host_platform != 'emscripten'
+	curl_dep = dependency('libcurl', static: is_static)
+endif
 
 project_link_args = []
 project_c_args = []
 project_cpp_args = []
+
+fftw_dep = dependency('fftw3f', static: is_static)
+threads_dep = dependency('threads')
+if host_platform == 'emscripten'
+	zlib_dep = []
+	png_dep = []
+	sdl2_dep = []
+	bzip2_dep = []
+	project_link_args += [
+		'--no-heap-copy',
+		'-s', 'WASM=1',
+		'-s', 'ALLOW_MEMORY_GROWTH=1',
+		'-s', 'FORCE_FILESYSTEM=1',
+		'-s', 'EXIT_RUNTIME=1',
+	]
+	emcc_args = [
+		'-s', 'USE_SDL=2',
+		'-s', 'USE_BZIP2=1',
+		'-s', 'USE_LIBPNG',
+		'-s', 'USE_ZLIB=1',
+		'-s', 'DISABLE_EXCEPTION_CATCHING=0',
+	]
+	if is_debug
+		project_link_args += [ '--source-map-base=./' ]
+		emcc_args += [ '-gsource-map' ]
+	endif
+	project_link_args += emcc_args
+	project_c_args += emcc_args
+	project_cpp_args += emcc_args
+else
+	zlib_dep = dependency('zlib', static: is_static)
+	png_dep = dependency('libpng16', static: is_static)
+	sdl2_dep = dependency('sdl2', static: is_static)
+	bzip2_dep = dependency('bzip2', static: is_static)
+endif
+json_dep = dependency('jsoncpp', static: is_static)
+
 if is_msvc
 	if x86_sse_level >= 30
 		warning('SSE3 configured to be enabled but unavailable in msvc')
@@ -323,6 +366,12 @@ powder_files += data_files
 render_files += data_files
 font_files += data_files
 
+if host_platform == 'emscripten'
+	project_link_args += [
+		'-o', app_exe + '.html', # so we get a .wasm, a .js, and a .html
+	]
+endif
+
 if get_option('build_powder')
 	powder_deps = [
 		threads_dep,
@@ -362,6 +411,9 @@ if get_option('build_powder')
 endif
 
 if get_option('build_render')
+	if host_platform == 'emscripten'
+		error('render does not target emscripten')
+	endif
 	render_deps = [
 		threads_dep,
 		zlib_dep,
@@ -385,6 +437,9 @@ if get_option('build_render')
 endif
 
 if get_option('build_font')
+	if host_platform == 'emscripten'
+		error('font does not target emscripten')
+	endif
 	font_deps = [
 		threads_dep,
 		zlib_dep,
