Provide three levels of install support
Namely: no, yes, and yes and ask at startup.

The install_check option is thus replaced by the can_install option. -Dinstall_check=true maps to -Dcan_install=yes_check, while -Dinstall_check=false maps to -Dcan_install=yes. -Dcan_install=no is new and is recommended for downstream packaging, where -Dinstall_check=false was historically used.

Also improve error messages about bad configuration here and there and scatter configuration code in subdirectories, where they can be closer to their areas of effect.

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -18,10 +18,11 @@ option(
 	description: 'Don\'t show notifications about available updates'
 )
 option(
-	'install_check',
-	type: 'boolean',
-	value: false,
-	description: 'Do install check on startup'
+	'can_install',
+	type: 'combo',
+	choices: [ 'no', 'yes', 'yes_check', 'auto' ],
+	value: 'auto',
+	description: 'Disable (\'no\') or enable (\'yes\') setting up file and URL associations, or even offer to do it at startup (\'yes_check\')'
 )
 option(
 	'http',
