--- a/src/meson.build
+++ b/src/meson.build
@@ -1,8 +1,40 @@
-configure_file(
-	input: 'Config.template.h',
-	output: 'Config.h',
-	configuration: conf_data
-)
+conf_data = configuration_data()
+
+app_id = get_option('app_id')
+mod_id = get_option('mod_id')
+is_snapshot = get_option('snapshot')
+is_beta = get_option('beta')
+is_mod = mod_id > 0
+conf_data.set('X86', is_x86 ? 'true' : 'false')
+conf_data.set('BETA', is_beta ? 'true' : 'false')
+conf_data.set('MOD_ID', mod_id)
+conf_data.set('DEBUG', is_debug ? 'true' : 'false')
+conf_data.set('MOD', is_mod ? 'true' : 'false')
+conf_data.set('SNAPSHOT', is_snapshot ? 'true' : 'false')
+conf_data.set('SNAPSHOT_ID', get_option('snapshot_id'))
+conf_data.set('ALLOW_FAKE_NEWER_VERSION', (is_snapshot or is_beta or is_debug or is_mod) ? 'true' : 'false')
+conf_data.set('IDENT_PLATFORM', ident_platform)
+conf_data.set('IDENT', '@0@-@1@-@2@'.format(host_arch, host_platform, host_libc).to_upper())
+
+update_server = get_option('update_server')
+conf_data.set('UPDATESERVER', update_server)
+conf_data.set('USE_UPDATESERVER', update_server != '' ? 'true' : 'false')
+
+enforce_https = get_option('enforce_https')
+if not is_debug and not enforce_https
+	error('refusing to build a release binary without enforcing HTTPS, configure with -Denforce_https=true to fix this error')
+endif
+conf_data.set('ENFORCE_HTTPS', enforce_https ? 'true' : 'false')
+
+conf_data.set('IGNORE_UPDATES', get_option('ignore_updates') ? 'true' : 'false')
+conf_data.set('SERVER', get_option('server'))
+conf_data.set('STATICSERVER', get_option('static_server'))
+conf_data.set('APPNAME', get_option('app_name'))
+conf_data.set('APPCOMMENT', get_option('app_comment'))
+conf_data.set('APPEXE', app_exe)
+conf_data.set('APPID', app_id)
+conf_data.set('APPDATA', get_option('app_data'))
+conf_data.set('APPVENDOR', get_option('app_vendor'))
 
 powder_files = files(
 	'SDLCompat.cpp',
@@ -43,10 +75,12 @@ subdir('graphics')
 subdir('gui')
 if lua_variant != 'none'
 	subdir('lua')
+	conf_data.set('LUACONSOLE', 'true')
 else
 	powder_files += files(
 		'lua/PlainCommandInterface.cpp',
 	)
+	conf_data.set('LUACONSOLE', 'false')
 endif
 subdir('prefs')
 subdir('resampler')
@@ -79,4 +113,10 @@ configure_file(
 	input: 'simulation/ToolNumbers.template.h',
 	output: 'ToolNumbers.h',
 	configuration: tools_conf_data
+)
+
+configure_file(
+	input: 'Config.template.h',
+	output: 'Config.h',
+	configuration: conf_data
 )
