Group request manager files into their own directory

--- a/src/client/http/meson.build
+++ b/src/client/http/meson.build
@@ -5,12 +5,6 @@ client_files += files(
 	'Request.cpp',
 	'SaveUserInfoRequest.cpp',
 	'ThumbnailRequest.cpp',
-	'RequestManager.cpp',
 )
 
-if enable_http
-	client_files += files('RequestManagerHttp.cpp')
-else
-	client_files += files('RequestManagerNoHttp.cpp')
-endif
-conf_data.set('NOHTTP', not enable_http ? 'true' : 'false')
+subdir('requestmanager')
