Emscripten: Add compatible main loop

--- a/src/common/platform/meson.build
+++ b/src/common/platform/meson.build
@@ -10,18 +10,21 @@ if host_platform == 'windows'
 	path_sep_char = '\\\\'
 	common_files += files(
 		'Windows.cpp',
+		'ExitCommon.cpp',
 	)
 elif host_platform == 'darwin'
 	can_install_enforce_no = true
 	common_files += files(
 		'Darwin.cpp',
 		'Posix.cpp',
+		'ExitCommon.cpp',
 	)
 elif host_platform == 'android'
 	can_install_enforce_no = true
 	common_files += files(
 		'Android.cpp',
 		'Posix.cpp',
+		'ExitCommon.cpp',
 	)
 elif host_platform == 'emscripten'
 	use_bluescreen = false
@@ -36,12 +39,14 @@ elif host_platform == 'linux'
 	common_files += files(
 		'Linux.cpp',
 		'Posix.cpp',
+		'ExitCommon.cpp',
 	)
 else
 	can_install_enforce_no = true
 	common_files += files(
 		'Null.cpp',
 		'Posix.cpp',
+		'ExitCommon.cpp',
 	)
 endif
 conf_data.set('SET_WINDOW_ICON', set_window_icon ? 'true' : 'false')
