--- a/src/meson.build
+++ b/src/meson.build
@@ -46,6 +46,15 @@ powder_files = files(
 	'lua/TPTScriptInterface.cpp',
 	'lua/TPTSTypes.cpp',
 )
+if host_platform == 'emscripten'
+	powder_files += files(
+		'PowderToySDLEmscripten.cpp',
+	)
+else
+	powder_files += files(
+		'PowderToySDLCommon.cpp',
+	)
+endif
 if is_x86
 	powder_files += files('X86KillDenormals.cpp')
 endif
